# starsector-lab

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  about.hbs  about.toml  deny.toml
.github/workflows/: ci.yml  pages.yml  release.yml
app/: Cargo.toml
app/src/: app.rs  main.rs  ui.rs
app/src/ui/: background.rs  entities.rs  panels.rs  state.rs  theme.rs  widgets.rs  windows.rs
app/src/ui/entities/: ship.rs  weapon.rs
app/src/ui/panels/: bottom.rs  center.rs  left.rs  right.rs  top.rs
app/src/ui/state/: data_source.rs  settings.rs  view.rs
app/src/ui/widgets/: compare.rs  reset_slider.rs  sprite.rs  table.rs  window_button.rs
app/src/ui/windows/: settings.rs
core/: Cargo.toml
core/src/: data.rs  error.rs  lib.rs  locate.rs  parser.rs
core/src/data/: ship.rs  weapon.rs
core/src/parser/: csv.rs  hull.rs  json.rs  wpn.rs
core/src/parser/csv/: hull.rs  weapon.rs
core/src/parser/json/: ship.rs
docs/: index.html
