[workspace]
resolver = "3"
members = ["app", "core"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Zitronenjoghurt/starsector-lab"
version = "0.1.0"

[workspace.dependencies]
starsector-lab = { path = "core" }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }

[profile.release]
strip = true
