[package]
name = "starsector-lab-app"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[dependencies]
starsector-lab = { workspace = true }
eframe = { version = "0.35.0", default-features = false, features = ["accesskit", "default_fonts", "persistence", "wgpu"] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.35.0", default-features = false, features = ["wayland", "x11"] }