[package]
name = "starsector-lab-app"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[dependencies]
starsector-lab = { workspace = true }
eframe = { version = "0.35.0", default-features = false, features = ["accesskit", "default_fonts", "persistence", "wgpu"] }
egui = "0.35.0"
egui-notify = "0.22.0"
egui-phosphor = { git = "https://github.com/Zitronenjoghurt/egui-phosphor.git", rev = "573b1ff1ee655c0a5eab77d7733d4ae66a2cd570", default-features = false, features = ["regular"] }
rfd = "0.17.2"
serde = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.35.0", default-features = false, features = ["wayland", "x11"] }